[metadata]
name = LeCroyDSO
author = Ashok Bruno
author_email = ashok.bruno@teledyne.com
maintainer = Ashok Bruno
maintainer_email = ashok.bruno@teledyne.com
license = MIT License
description = Python communication utilities for LeCroy oscilloscopes
keywords =
    ActiveDSO
    VISA
    GPIB
    USBTMC
    serial
    RS232
    measurement
    acquisition
url = https://github.com/lecroydso/lecroydso
long_description = file: README.rst, AUTHORS, CHANGES
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
platforms = Linux,, Windows,, Mac

[options]
packages =
    lecroydso
zip_safe = False
setup_requires = setuptools_scm>=3.4.3
install_requires =
    typing_extensions
    importlib-metadata; python_version<"3.8"
    dataclasses; python_version<"3.7"
python_requires = >=3.6
use_2to3 = False
platforms = Linux; Windows; Mac
setup_require = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3

[options.package_data]
* = *.dll
lecroydso = py.typed

[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    examples,
    lecroydso/thirdparty/*
ignore = E203, E266, E501, W503, E731
# line length is intentionally set to 80 here because lecroydso uses Bugbear
# See https://github.com/psf/black/blob/master/README.md#line-length for more details
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
per-file-ignores =
    lecroydso/__init__.py:E402

[mypy]
follow_imports = ignore
strict_optional = True

[mypy-lecroydso.thirdparty.*]
ignore_errors = True

[isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = lecroydso/__init__.py
known_third_party = pyvisa,importlib_metadata,setuptools,typing_extensions